Some final polishing

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -630,3 +630,18 @@ html, body {
     margin-top: $main-padding;
   }
 }
+
+////////////////////////////////////////////////////////////////////////////////
+// CUSTOM
+////////////////////////////////////////////////////////////////////////////////
+// These are the styles for things such as the widget that we added
+
+.widget-example { 
+  width: 50%;
+}
+
+@media (max-width: $phone-width) {
+  .widget-example {
+    width: 100%;
+  }
+}
