--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -48,7 +48,9 @@ under the License.
       </span>
     </a>
     <div class="tocify-wrapper">
-      <%= image_tag "logo.png" %>
+      <a href="http://backstit.ch", target="_blank">
+        <%= image_tag "logo.png" %>
+      </a>
       <% if language_tabs %>
         <div class="lang-selector">
           <% language_tabs.each do |lang| %>
