--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -48,7 +48,7 @@ under the License.
       </span>
     </a>
     <div class="tocify-wrapper">
-      <a href="http://backstit.ch", target="_blank">
+      <a href="http://docs.backstit.ch/api">
         <%= image_tag "logo.png" %>
       </a>
       <% if language_tabs %>
